syntax = "proto3";

package events;

option go_package = "github.com/ritchieridanko/apotekly-api/auth/pkg/events;events";

message AuthRegistered {
  string recipient = 1;
  string token = 2;
}
